fixed player not displaying consistently on FF by forcing div visibility

--- a/theming/css/main.css
+++ b/theming/css/main.css
@@ -59,6 +59,7 @@ body {
 #player {
     max-width: 720px;
     border:none;
+    visibility: visible;
 }
 
 #vidTitle {
